--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Форма авторизации</title>
-        <link href='./style-index.css' rel="stylesheet"/>
+        <link href='../css/style-index.css' rel="stylesheet"/>
     </head>
     <body>
       <form class="login" action="./mainPage-improved.html">
