--- a/html/mainPage-improved.html
+++ b/html/mainPage-improved.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Производственный план</title>
-        <link href='./style-main-improved.css' rel="stylesheet"/>
+        <link href='../css/style-main-improved.css' rel="stylesheet"/>
          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     </head>
     <body>
@@ -43,7 +43,7 @@
                         <div class="section-title">
                             <h2 id="current-year" class="text-xl font-semibold mb-2 text-gray-800">Года производственных планирований</h2>
                             <span class="resize-buttons">
-                                <span class="max-year"><img src="./resources/img/resize-icon.png" alt="Развернуть"></span>
+                                <span class="max-year"><img src="../resources/img/resize-icon.png" alt="Развернуть"></span>
                             </span>
                         </div>
                         <div id="year-buttons" class="space-y-3 grid">
@@ -87,7 +87,7 @@
                         <div class="section-title">
                             <h2 id="current-chapter" class="text-xl font-semibold mb-2 text-gray-800">Главы статистики</h2>
                             <span class="resize-buttons">
-                                <span class="max-chapter"><img src="./resources/img/resize-icon.png" alt="Развернуть"></span>
+                                <span class="max-chapter"><img src="../resources/img/resize-icon.png" alt="Развернуть"></span>
                             </span>
                         </div>
                         <div id="chapter-buttons" class="space-y-3 grid">
@@ -225,7 +225,16 @@
 
                                 <tbody>
                                     <tr class="hover:bg-gray-50 transition-colors t-row">
-                                        <td class="py-4 px-6 border-b border-gray-200 text-sm">3</td>
+                                        <td class="py-4 px-6 border-b border-gray-200 text-sm">
+                                            <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
+                                                <span
+                                                    class="input-field"
+                                                    role="textbox"
+                                                    contenteditable="false">
+                                                1
+                                                </span>
+                                            </div>
+                                        </td>
                                         <td class="py-4 px-6 border-b border-gray-200 td-prop">
                                             <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
                                                 <span
@@ -242,8 +251,13 @@
                                                     class="input-field"
                                                     role="textbox"
                                                     contenteditable="false">
-                                                Данные о численности населения, проживающего в зонах радиоактивного загрязнения
+                                                    Данные о численности населения, проживающего в зонах радиоактивного загрязнения
                                                 </span>
+                                            </div>
+                                            <div class="dropdown-content">
+                                                <a href="#about">Тест 1</a>
+                                                <a href="#base">Минск тест</a>
+                                                <a href="#blog">Год 2020</a>
                                             </div>
                                         </td>
                                         <td class="py-4 px-6 border-b border-gray-200 td-prop">
@@ -340,7 +354,16 @@
                                         </td>
                                     </tr>
                                     <tr class="hover:bg-gray-50 transition-colors">
-                                        <td class="py-4 px-6 border-b border-gray-200 text-sm">4</td>
+                                        <td class="py-4 px-6 border-b border-gray-200 text-sm">
+                                            <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
+                                                <span
+                                                    class="input-field"
+                                                    role="textbox"
+                                                    contenteditable="false">
+                                                2
+                                                </span>
+                                            </div>
+                                        </td>
                                         <td class="py-4 px-6 border-b border-gray-200 td-prop">
                                             <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
                                                 <span 
@@ -455,7 +478,16 @@
                                         </td>
                                     </tr>
                                     <tr class="hover:bg-gray-50 transition-colors">
-                                        <td class="py-4 px-6 border-b border-gray-200 text-sm">4.1</td>
+                                        <td class="py-4 px-6 border-b border-gray-200 text-sm">
+                                            <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
+                                                <span
+                                                    class="input-field"
+                                                    role="textbox"
+                                                    contenteditable="false">
+                                                3
+                                                </span>
+                                            </div>
+                                        </td>
                                         <td class="py-4 px-6 border-b border-gray-200 td-prop">
                                             <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
                                                 <span 
@@ -565,7 +597,16 @@
                                         </td>
                                     </tr>
                                     <tr class="hover:bg-gray-50 transition-colors">
-                                        <td class="py-4 px-6 border-b border-gray-200 text-sm">2.1</td>
+                                        <td class="py-4 px-6 border-b border-gray-200 text-sm">
+                                            <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
+                                                <span
+                                                    class="input-field"
+                                                    role="textbox"
+                                                    contenteditable="false">
+                                                4
+                                                </span>
+                                            </div>
+                                        </td>
                                         <td class="py-4 px-6 border-b border-gray-200 td-prop">
                                             <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
                                                 <span 
@@ -695,103 +736,7 @@
                 </footer> -->
             </div>
         </div>
-        <script>
-            jQuery(document).ready(function($){
-
-                /* ------- Развернуть разделы глав и годов ----------------- */
-                
-                $(document).on('click', '.max-chapter', function(){
-                    $('#chapter-buttons').css("display", "grid");
-                    $('#chapter-section').addClass('mb-6');
-                    let currentChapter = $('#chapter-buttons').children('.active').text();
-                    $('#current-chapter').html($('#current-chapter').html().replace("Текущая глава статистики - " + currentChapter, "Главы статистики"));
-                });
-                
-                $(document).on('click', '.max-year', function(){
-                    $('#year-buttons').css("display", "grid");
-                    $('#add-year-button-section').css("display", "flex");
-                    $('#year-section').addClass('mb-6');
-                    let currentYear = $('#year-buttons').children('.active').text();
-                    $('#current-year').html($('#current-year').html().replace("Текущий год производственного планирования - " + currentYear, "Года производственных планирований"));
-                });
-
-                /* ---------- Эмуляция кликов по кнопкам ----------------- */
-
-                $('#main-stats .main-btn').on('click', function() {
-                    $('#main-stats .main-btn').removeClass('active');
-                    $(this).addClass('active');
-                    $('#years-wrapper').css('display', 'block');
-                    $('#chapters-wrapper').css('display', 'none');
-                    $('#table-wrapper').css('display', 'none');
-                    /* -------- reset -------- */
-                    let currentYear = $('#year-buttons').children('.active').text();
-                    $('#year-buttons .year-btn').removeClass('active');
-                    $('#year-buttons').css("display", "grid");
-                    $('#add-year-button-section').css("display", "flex");
-                    $('#year-section').addClass('mb-6');
-                    $('#current-year').html($('#current-year').html().replace("Текущий год производственного планирования - " + currentYear, "Года производственных планирований"));
-
-                    let currentChapter = $('#chapter-buttons').children('.active').text();
-                    $('#chapter-buttons .chapter-btn').removeClass('active');
-                    $('#chapter-buttons').css("display", "grid");
-                    $('#chapter-section').addClass('mb-6');
-                    $('#current-chapter').html($('#current-chapter').html().replace("Текущая глава статистики - " + currentChapter, "Главы статистики"));
-                });
-
-                $('#year-buttons .year-btn').on('click', function() {
-                    $('#year-buttons .year-btn').removeClass('active');
-                    $(this).addClass('active');
-                    $('#chapters-wrapper').css('display', 'block');
-                    $('#table-wrapper').css('display', 'none');
-
-                    /* ------- Свернуть главы -------- */
-                    let currentChapter = $('#chapter-buttons').children('.active').text();
-                    $('#chapter-buttons .chapter-btn').removeClass('active');
-                    $('#chapter-buttons').css("display", "grid");
-                    $('#chapter-section').addClass('mb-6');
-                    $('#current-chapter').html($('#current-chapter').html().replace("Текущая глава статистики - " + currentChapter, "Главы статистики"));
-
-                    /* ------- Свернуть года -------- */
-                    $('#year-buttons').css("display", "none");
-                    $('#add-year-button-section').css("display", "none");
-                    $('#year-section').removeClass();
-                    let currentYear = $('#year-buttons').children('.active').text();
-                    $('#current-year').html($('#current-year').html().replace("Года производственных планирований", "Текущий год производственного планирования - " + currentYear));
-                });
-
-                $('#chapter-buttons .chapter-btn').on('click', function() {
-                    $('#chapter-buttons .chapter-btn').removeClass('active');
-                    $(this).addClass('active');
-                    $('#table-wrapper').css('display', 'flex');
-                    /* -------- Свернуть главы -------- */
-                    $('#chapter-buttons').css("display", "none");
-                    $('#chapter-section').removeClass();
-                    let currentChapter = $('#chapter-buttons').children('.active').text();
-                    $('#current-chapter').html($('#current-chapter').html().replace("Главы статистики", "Текущая глава статистики - " + currentChapter));
-                    $('html, body').animate({
-                        scrollTop: $("#table-wrapper").offset().top
-                        }, 1000);
-                    });
-
-                $('#Prod-plan-table tbody tr td div #edit-row').on('click', function() {
-                    let currentBtn = $(this);
-
-                    currentBtn.removeClass('bg-yellow-100');
-                    currentBtn.removeClass('text-yellow-600');
-                    currentBtn.removeClass('hover:bg-yellow-200');
-                    currentBtn.removeClass('focus:ring-yellow-500');
-
-                    currentBtn.addClass('bg-green-100');
-                    currentBtn.addClass('text-green-600');
-                    currentBtn.addClass('hover:bg-green-200');
-                    currentBtn.addClass('focus:ring-green-500');
-                    console.log(currentBtn.children().html());
-
-                    currentBtn.children().html('Done');
-                    currentBtn.removeAttr('id');
-                    currentBtn.attr('id', 'done-row');
-                    });
-                });
-        </script>
+        <script src="../js/years-chapters.js" defer></script>
+        <script src="../js/table-edit-btn.js" defer></script>
     </body>
 </html>
