--- a/html/mainPage-improved.html
+++ b/html/mainPage-improved.html
@@ -130,11 +130,98 @@
                         </div>
                     </div>
                 </div>
+                    <div id="approved-wrapper" class="flex h bg-white rounded-lg shadow-lg overflow-hidden">
+                        <div class="w-[100%] p-6 overflow-y-auto">
+                            <div class="flex justify-between items-center mb-6">
+                                <h2 id="approved-title" class="text-2xl font-bold text-gray-800">Таблица утверждения ответственных</h2>
+                                <div class="flex gap-3">
+                                <button
+                                    class="py-2 px-4 bg-green-600 text-white rounded-lg shadow-sm font-medium transition-all hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 flex items-center gap-2"
+                                >
+                                    <span id="add-approved-row" class="material-symbols-outlined">add</span> Добавить строку
+                                </button>
+                            </div>
+                            </div>
+                            <div class="approved-section">
+                                <table id="Prod-plan-table" class="min-w-full bg-white border border-gray-200 rounded-lg shadow-sm">
+                                    <thead class="sticky-head">
+                                        <tr class="bg-gray-100">
+                                            <th id="table-head" class="py-3-table px-12-table text-left text-approved-table font-semibold text-gray-700 border-b">
+                                                Начальник главкома</th>
+                                            <th id="table-head" class="py-3-table px-12-table text-left text-approved-table font-semibold text-gray-700">
+                                                Срок выполнения
+                                            </th>
+                                            <th id="table-head" class="py-3-table px-12-table text-left text-approved-table font-semibold text-gray-700 border-b">
+                                                Ответственный
+                                            </th>
+                                            <th id="table-head" class="py-3-table px-12-table text-left text-approved-table font-semibold text-gray-700 border-b">
+                                                Действия
+                                            </th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr class="hover:bg-gray-50 transition-colors t-row">
+                                        <td class="py-4 px-6 border-b border-gray-200 text-sm">
+                                            <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
+                                                <span
+                                                    class="input-field"
+                                                    role="textbox"
+                                                    contenteditable="false">
+                                                В.В. Тестовый-координатор
+                                                </span>
+                                            </div>
+                                        </td>
+                                        <td class="py-4 px-6 border-b border-gray-200 td-prop">
+                                            <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
+                                                <span
+                                                    class="input-field"
+                                                    role="textbox"
+                                                    contenteditable="false">
+                                                31.10.2025
+                                                </span>
+                                            </div>
+                                        </td>
+                                        <td class="py-4 px-6 border-b border-gray-200">
+                                            <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
+                                                <span
+                                                    id="job-span"
+                                                    class="input-field"
+                                                    role="textbox"
+                                                    contenteditable="false">
+                                                    В.В. Тестовый-отраслевой (Специалист)
+                                                </span>
+                                            </div>
+                                        </td>
+                                        <td class="py-4 px-6 border-b border-gray-200 text-center">
+                                            <div class="flex justify-center space-x-3">
+                                                <button
+                                                    id="edit-row" class="p-2 bg-yellow-100 text-yellow-600 rounded-full hover:bg-yellow-200 transition-colors focus:outline-none focus:ring-2 focus:ring-yellow-500 focus:ring-opacity-50"
+                                                >
+                                                    <span class="material-symbols-outlined text-sm">edit</span>
+                                                </button>
+                                                <button
+                                                    id="delete-row" class="p-2 bg-red-100 text-red-600 rounded-full hover:bg-red-200 transition-colors focus:outline-none focus:ring-2 focus:ring-red-500 focus:ring-opacity-50"
+                                                >
+                                                    <span class="material-symbols-outlined text-sm">delete</span>
+                                                </button>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div id="table-wrapper" class="flex h-[calc(100vh-220px)] bg-white rounded-lg shadow-lg overflow-hidden">
                     <main class="w-[100%] p-6 overflow-y-auto">
                         <div class="flex justify-between items-center mb-6">
                             <h2 id="edit-title" class="text-2xl font-bold text-gray-800">Производственный план</h2>
                             <div class="flex gap-3">
+                                <div class="py-2 px-4 bg-red-500 text-white rounded-lg shadow-sm font-medium transition-all hover:bg-red-500 focus:outline-none focus:ring-2 
+                                    focus:ring-primary-500 focus:ring-opacity-50 flex items-center gap-2">
+                                    <input type="checkbox" id="myCheckbox">
+                                    <label for="myCheckbox">Подтверждён</label>
+                                </div>
                                 <button
                                     class="py-2 px-4 bg-green-600 text-white rounded-lg shadow-sm font-medium transition-all hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50 flex items-center gap-2"
                                 >
@@ -247,7 +334,8 @@
                                         </td>
                                         <td class="py-4 px-6 border-b border-gray-200">
                                             <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
-                                                <span 
+                                                <span
+                                                    id="job-span"
                                                     class="input-field"
                                                     role="textbox"
                                                     contenteditable="false">
@@ -555,7 +643,7 @@
                                         <td class="py-4 px-6 border-b border-gray-200 td-prop">
                                             <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
                                                 <span 
-                                                    class="input-field"
+                                                    class="input-field" 
                                                     role="textbox"
                                                     contenteditable="false">
                                                 республика, области, районы, зоны загрязнения, возрастные группы
@@ -622,7 +710,7 @@
                                                 <span 
                                                     class="input-field"
                                                     role="textbox"
-                                                    contenteditable="false"="false">
+                                                    contenteditable="false">
                                                 Данные о численности населения, проживающего в зонах радиоактивного загрязнения
                                                 </span>
                                             </div>
@@ -724,11 +812,11 @@
                                 </tbody>
                             </table>
                         </div>
-                        <div class="mt-6 bg-blue-50 p-4 rounded-lg border border-blue-200">
+                        <!-- <div class="mt-6 bg-blue-50 p-4 rounded-lg border border-blue-200">
                             <p class="text-blue-700 text-sm">
                                 <span class="material-symbols-outlined text-sm align-middle mr-1">info</span> Кликните на любой ячейке для редактирования. Изменения сохраняются автоматически после перехода на редактирование следующей ячейки.
                             </p>
-                        </div>
+                        </div> -->
                     </main>
                 </div>
                 <!-- <footer class="mt-6 text-center text-gray-500 text-sm">
@@ -738,5 +826,6 @@
         </div>
         <script src="../js/years-chapters.js" defer></script>
         <script src="../js/table-edit-btn.js" defer></script>
+        <script src="../js/dropdown-jobNames.js" defer></script>
     </body>
 </html>
