fix: datepicker funct

--- a/html/mainPage-improved.html
+++ b/html/mainPage-improved.html
@@ -174,7 +174,7 @@
                                         </td>
                                         <td class="py-4 px-6 border-b border-gray-200 td-prop">
                                             <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
-                                                <input type="text" class="datefield">
+                                                <input id="job-span" type="text" class="datefield input-field" value="20.09.2025" disabled="false">
                                             </div>
                                         </td>
                                         <td class="py-4 px-6 border-b border-gray-200">
