--- a/html/mainPage-improved.html
+++ b/html/mainPage-improved.html
@@ -165,7 +165,7 @@
                                         <td class="py-4 px-6 border-b border-gray-200 text-sm">
                                             <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
                                                 <span
-                                                    class="input-field"
+                                                    class="input-field text-field"
                                                     role="textbox"
                                                     contenteditable="false">
                                                 В.В. Тестовый-координатор
@@ -181,9 +181,8 @@
                                             <div class="input-wrapper w-full p-2 border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-primary-500 focus:border-primary-500">
                                                 <span
                                                     id="job-span"
-                                                    class="input-field"
-                                                    role="textbox"
-                                                    contenteditable="false">
+                                                    class="input-field text-field"
+                                                    role="textbox">
                                                     В.В. Тестовый-отраслевой (Специалист)
                                                 </span>
                                             </div>
